# nao-move-by-speech-cpp

./: CMakeLists.txt  move_by_speach_nao.cpp
